--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,6 @@
 html{
     font-size: 62.5%;
 }
-
 body{
     display: grid ;
     grid:
@@ -15,45 +14,37 @@ body{
     grid-template-columns: repeat(4,1fr);    
     font-size: 1.6rem;
     font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    
+    font-weight: 400;    
 }
-
 .header{
     grid-area: header;  
     background-color: #fff;
 }
-
 .header .header-container{
     display: flex;
     padding: 20px 40px;
     justify-content: space-between;
     align-items: center;
     min-height: 75px;
-
 }
-
 .header h1{
     font-size: 3rem;
     font-weight: 700;
     transition: 0.3s;
 }
-
 header a:hover h1{
     color: coral;
 }
-
 .hero{
     grid-area: hero;
     height: 89vh;
     background:url(../images/lemons.jpg) center center no-repeat;
-    background-size:cover ;
+    background-size:cover;
     display: flex;
     justify-content: center;
     align-items: center ;
     position: relative;
 }
-
 .hero h2{
     font-weight: 500;
     text-transform: uppercase;
@@ -65,31 +56,25 @@ header a:hover h1{
     height: 35px;
     bottom: 40px;
     animation: downarrow 0.6s infinite alternate ease-in-out;
-
 }
-
-
 @-webkit-keyframes downarrow {
     0% { -webkit-transform: translatey(0);opacity:0.4;}
     100% {-webkit-transform: translatey(0.4em);}
 }
-
 @media(max-width:425px){
     .hero{
         height: 60vh;
     }
-
     .hero h2{
         font-size: 2.5rem;
         text-align: center;
     }
 }
-
 .about{
     grid-area: about;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    background-color:#fff ;
+    background-color:#fff;
     max-width: var(--max-width-size);
     margin: 0 auto;
 }
@@ -117,7 +102,7 @@ header a:hover h1{
     font-weight: 700;
 }
 .about .image{
-    height: 100%;;
+    height: 100%;
     width: 100%;
 }
 .about .image.right{
@@ -128,39 +113,32 @@ header a:hover h1{
     background: url(../images/sky.jpg)center center no-repeat;
     background-size: cover;
 }
-
 @media(max-width: 425px){
     .about .item{
         text-align: center;
     }
-
     .about{
         grid-template-columns: 1fr;
         grid-template-rows: repeat(4,1fr);
     }
-
 }
 .services{
     grid-area:services;
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
-
 .services .service{
     padding: 70px 20px;
     text-align: center;
 }
-
 .services .service img{
     width: 250px;
     margin-bottom: 30px;
 }
-
 .services .service h3{
     font-size: 1.8rem;
     font-weight: 700;
 }
-
 .services .service p{
     font-size: 2rem;
     font-weight: 400;
@@ -171,32 +149,25 @@ header a:hover h1{
 
 .services .service:nth-child(1){
     background-color: lightskyblue;
-
 }
 .services .service:nth-child(2){
     background-color: lightpink;
 }
-
 @media(max-width: 425px){
     .services {
         grid-template-columns: 1fr;
-
     }
 }
-
-.projects{
-    
+.projects{    
     grid-area:projects;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 }
-
 .projects img{
     width:100%;
     height: 100%;
     transition: 0.3s;
 }
-
 .projects a:hover{
     opacity: 0.8;
 }
@@ -212,58 +183,44 @@ header a:hover h1{
     grid-template-rows: repeat(4,1fr);
     }
 }
-
 .footer{
     grid-area:footer;
     display: flex;
     background-color: lightgreen;
     flex-direction: column;
     text-align: center;
-    padding: 100px 0;
-       
+    padding: 100px 0;       
 }
-
 .footer h4{
     font-weight: 700;
     font-size: 2.5rem;
-    margin-bottom: 20px ;
-    
+    margin-bottom: 20px;    
 }
-
 .footer nav{
     margin:50px 0;
-
 }
 .footer nav ul{
     display: flex;
     justify-content: center;
     max-width: 320px;
     margin: 0 auto;
-
 }
-
 .footer nav ul li a{
     font-weight: 500;
     font-size: 2rem;
     margin:20px;
     transition:0.3s;
 }
-
 .footer nav ul li a:hover{
     color:white;
-
 }
-
 .footer .social i{
     font-size:  2rem;
     transition: 0.3s;
 }
-
 .footer .social a{
     margin:20px;
 }
-
 .footer .social a:hover{
     color:#fff;
-
 }
